# cpp_lab

additionally projects/: a.out
additionally projects/lab 3/: CMakeLists.txt
additionally projects/lab 3/math and basic function/block diagrams/variant 1/для загрузки на сайте/: 1.json  2.json
additionally projects/lab 3/math and basic function/block diagrams/variant 16/для загрузки на сайте/: 1.json  2.json  3.json
additionally projects/lab 3/math and basic function/block diagrams/variant 17/для загрузки на сайте/: 2.json
additionally projects/lab 3/math and basic function/part 1/: num 13.cpp  num 3.cpp  num 6.cpp
additionally projects/lab 3/math and basic function/variant 1/: num 3.cpp
additionally projects/lab 3/math and basic function/variant 16/: num 1.cpp  num 3.cpp
additionally projects/lab 3/math and basic function/variant 17/: num 1.cpp  num 2.cpp  num 3.cpp
additionally projects/lab 4/part 1/: num 10.cpp  num 3.cpp  num 5.cpp
additionally projects/lab 4/part 2/: num 1.cpp  num 10.cpp  num 13.cpp
additionally projects/lab 4/part 3/: num 1.cpp  num 7.cpp  num 8.cpp
additionally projects/lab 4/part 4/: num 1.cpp  num 14.cpp  num 2.cpp
additionally projects/math and basic function/: CMakeLists.txt
additionally projects/math and basic function/block diagrams/part 1/для загрузки на сайте/: 13.json  3.json  (+1 more)
additionally projects/math and basic function/part 1/: num 3.cpp
additionally projects/math and basic function/variant 1/: num 1.cpp  num 2.cpp  num 3.cpp
additionally projects/math and basic function/variant 16/: num 1.cpp  num 2.cpp
(+15 files in other folders)
