cmake_minimum_required(VERSION 3.23)
project(lab)

set(CMAKE_CXX_STANDARD 14)

add_executable(lab "math and basic function/part 1/num 3.cpp" "math and basic function/part 1/num 6.cpp" "math and basic function/part 1/num 13.cpp" "math and basic function/variant 1/num 1.cpp" "math and basic function/variant 1/num 2.cpp" "math and basic function/variant 1/num 3.cpp" "math and basic function/variant 16/num 1.cpp" "math and basic function/variant 16/num 2.cpp" "math and basic function/variant 16/num 3.cpp" "math and basic function/variant 17/num 1.cpp" "math and basic function/variant 17/num 2.cpp" "math and basic function/variant 17/num 3.cpp")
